mainTemplate old.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualNetworkNewOrExisting": {
          "type": "string",
          "defaultValue": "new",
          "allowedValues": [
            "new",
            "existing"
          ],
          "metadata": {
            "description": "Determines whether or not a new virtual network should be provisioned."
          }
        },
        "publicWebApp": {
          "type": "string",
          "defaultValue": "no",
          "allowedValues": [
            "no",
            "yes"
          ],
          "metadata": {
            "description": "Determines whether or not the Web App is publically accessible or restriced to private VNET."
          }
        },
        "virtualNetworkName": {
            "type": "string",
            "defaultValue": "vnet01",
            "metadata": {
              "description": "Defines the name of your virtual network"
            }
        },
        "virtualNetworkAddressPrefixes": {
          "type": "array",
          "defaultValue": [
            "10.0.0.0/22"
          ],
          "metadata": {
            "description": "Defines the IP range of your virtual network. This should be in CIDR notation, for example 10.0.0.0/22"
          }
        },
        "guacamoleSubnetName": {
            "type": "string",
            "defaultValue": "guacamole-snet",
            "metadata": {
              "description": "Defines the name of the virtual network subnet where the guacamole container will be located"
            }
        },
        "guacamoleSubnetAddressPrefix": {
            "type": "string",
            "defaultValue": "10.0.1.0/24",
            "metadata": {
              "description": "Defines the network address subnet which gateway container will be attached to. This should be in CIDR notation, for example 10.0.1.0/24"
            }
        },
        "gatewaySubnetName": {
          "type": "string",
          "defaultValue": "gateway-snet",
          "metadata": {
            "description": "Defines the name of the virtual network subnet where the webapp will be located"
          }
        },
        "gatewaySubnetAddressPrefix": {
          "type": "string",
          "defaultValue": "10.0.2.0/24",
          "metadata": {
            "description": "Defines the network address subnet where the webapp will reside. This should be in CIDR notation, for example 10.0.2.0/24"
          }
        },
        "guacamoleInstanceName": {
            "type": "string",
            "defaultValue": "guacamole-ci",
            "metadata": {
              "description": "Defines the name for Guacamole gateway container"
            }
        },
        "gatewayWebAppName": {
          "type": "string",
          "defaultValue": "appm-gateway",
          "metadata": {
            "description": "Defines the name for Azure gateway web app"
          } 
        },
        "gatewaySubnetNSGName": {
          "type": "string",
          "defaultValue": "gateway-snet-nsg",
          "metadata": {
            "description": "Defines the name for network security group used for Gateway WebApp"
          } 
        },

        "guacamoleSubnetNSGName": {
          "type": "string",
          "defaultValue": "guacamole-snet-nsg",
          "metadata": {
            "description": "Defines the name for network security group used for Container"
          } 
        },
        "customerName": {
          "type": "string",
          "metadata": {
            "description": "Customer identifier. This will be used as part of the Gateway WebApp configuration. This can be found from Appm Application web address, for example %customerName%.appm.juriba.app"
          } 
        },

        "gatewayImageName": {
          "type": "string",
          "defaultValue": "sha-d9174c1",
          "metadata": {
            "description": "Defines the image to be used for Gateway container. This will default to latest available. Full list can be found here https://hub.docker.com/repository/docker/juriba/appmgateway/general"
          } 
        },
        "diagnosticUsername": {
          "type": "string",
          "metadata": {
            "description": "Value from AppM application to be used in Gateway container."
          } 
        },
        "diagnosticPassword": {
          "type": "securestring",
          "metadata": {
            "description": "Value from AppM application to be used in Gateway container."
          } 
        },  
        "gatewayEncryptionKey": {
          "type": "securestring",
          "metadata": {
            "description": "Value from AppM application to be used in Gateway container."
          } 
        },
        "privateEndpoint_name": {
          "type": "string",
          "metadata":{
              "description": "Name of your Private Endpoint"
          }
      },
      "privateLinkConnection_name": {
          "type": "string",
          "metadata":{
              "description": "Link name between your Private Endpoint and your Web App"
          }
      },
      "privateDNSZone_name": {
          "type": "string",
          "defaultValue": "privatelink.azurewebsites.net",
          "metadata":{
              "description": "Name must be privatelink.azurewebsites.net"
          }
      }
    },
    "variables": {
        "containerSubnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('guacamoleSubnetName'))]",
        "gatewaySubnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('gatewaySubnetName'))]",
        "appServicePlanName": "[concat(parameters('gatewayWebAppName'), '-asp')]"
    },
    "resources": [
        {
            "condition": "[equals(parameters('virtualNetworkNewOrExisting'), 'new')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2022-09-01",
            "name": "[parameters('virtualNetworkName')]",
            "location": "[ResourceGroup().location]",
            "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('gatewaySubnetNSGName'))]",
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('guacamoleSubnetNSGName'))]"
            ],
            "tags": {},
            "properties": {
                "addressSpace": {
                    "addressPrefixes": "[parameters('virtualNetworkAddressPrefixes')]"
                },
                "subnets": [
                    {
                      "condition": "[equals(parameters('publicWebApp'), 'no')]",
                      "name": "[parameters('gatewaySubnetName')]",
                      "properties": {
                          "addressPrefix": "[parameters('gatewaySubnetAddressPrefix')]",
                          "privateEndpointNetworkPolicies": "Disabled"
                      }
                    },
                    {
                      "condition": "[equals(parameters('publicWebApp'), 'yes')]",
                      "name": "[parameters('gatewaySubnetName')]",
                      "properties": {
                          "addressPrefix": "[parameters('gatewaySubnetAddressPrefix')]",
                          "privateEndpointNetworkPolicies": "Disabled",
                          "networkSecurityGroup": {
                            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('gatewaySubnetNSGName'))]"
                          },
                      "delegations": [
                        {
                          "name": "webapp",
                          "properties": {
                            "serviceName": "Microsoft.Web/serverfarms"
                          }
                        }
                      ]
                      }
                    },
                    {
                      "name": "[parameters('guacamoleSubnetName')]",
                      "properties": {
                          "addressPrefix": "[parameters('guacamoleSubnetAddressPrefix')]",
                          "privateEndpointNetworkPolicies": "Disabled",
                          "networkSecurityGroup": {
                            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('guacamoleSubnetNSGName'))]"
                          },
                      "delegations": [
                        {
                          "name": "container",
                          "properties": {
                            "serviceName": "Microsoft.ContainerInstance/containerGroups"
                          }
                        }
                      ]
                      }
                  }
                ]
            }
        },       
        {
          "condition": "[equals(parameters('publicWebApp'), 'yes')]",
          "type": "Microsoft.Network/networkSecurityGroups",
          "apiVersion": "2022-09-01",
          "name": "[parameters('gatewaySubnetNSGName')]",
          "location": "[ResourceGroup().location]",
          "dependsOn": [],
          "properties": {
              "securityRules": [
                  {
                      "name": "GUACD_Outbound",
                      "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('gatewaySubnetNSGName'), 'GUACD_Outbound')]",
                      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                      "properties": {
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "4822",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "[parameters('guacamoleSubnetAddressPrefix')]",
                          "access": "Allow",
                          "priority": 100,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "DENY_Outbound",
                      "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('gatewaySubnetNSGName'), 'DENY_Outbound')]",
                      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                      "properties": {
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "*",
                          "access": "Deny",
                          "priority": 110,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  }
              ]
          }
        },

        {
          "type": "Microsoft.Network/networkSecurityGroups",
          "apiVersion": "2022-09-01",
          "name": "[parameters('guacamoleSubnetNSGName')]",
          "location": "[ResourceGroup().location]",
          "dependsOn": [],
          "properties": {
            "securityRules": [
                {
                    "name": "guacdInbound",
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('guacamoleSubnetNSGName'), 'guacdInbound')]",
                    "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                    "properties": {
                        "protocol": "*",
                        "sourcePortRange": "*",
                        "destinationPortRange": "4822",
                        "sourceAddressPrefix": "[parameters('gatewaySubnetAddressPrefix')]",
                        "destinationAddressPrefix": "[parameters('guacamoleSubnetAddressPrefix')]",
                        "access": "Allow",
                        "priority": 110,
                        "direction": "Inbound",
                        "sourcePortRanges": [],
                        "destinationPortRanges": [],
                        "sourceAddressPrefixes": [],
                        "destinationAddressPrefixes": []
                    }
                }
            ]
        }
        },


        {
          "type": "Microsoft.Web/serverfarms",
          "apiVersion": "2022-09-01",
          "name": "[variables('appServicePlanName')]",
          "location": "[ResourceGroup().location]",
          "sku": {
            "name":"B2",
            "size":"Y1",
            "tier":"Basic"
          },
          "kind": "linux",
          "properties": {
            "reserved": true
          }
        },
        {
          "condition": "[equals(parameters('publicWebApp'), 'no')]",
          "type": "Microsoft.Web/sites",
          "apiVersion": "2022-09-01",
          "name": "[parameters('gatewayWebAppName')]",
          "location": "[ResourceGroup().location]",
          "kind": "app,linux,container",
          "dependsOn": [
            "[resourceId('Microsoft.Web/serverfarms', variables('appServicePlanName'))]"
          ],
          "properties": {
            "name": "[parameters('gatewayWebAppName')]",
            "http20Enabled": true,
            "httpsOnly": true,
            "serverFarmId": "[resourceId('Microsoft.Web/serverfarms', variables('appServicePlanName'))]",
            "siteConfig": {
              "linuxFxVersion": "[concat ('DOCKER|juriba/appmgateway:', parameters('gatewayImageName'))]",
              "alwaysOn": true,
              "http20Enabled": true,
              "minTlsVersion": "1.2",
              "healthCheckPath": "/vnc/",
              "ftpsState": "Disabled",
              "cors": {
                "allowedOrigins": ["[concat ('https://', parameters('customerName'), '.appm.juriba.app')]"],
                "supportCredentials": "true"
              },
              "appSettings": [
                {
                  "name": "WEBSITES_ENABLE_APP_SERVICE_STORAGE",
                  "value": "false"
                },
                {
                  "name": "APPM_USERNAME",
                  "value": "[parameters('diagnosticUsername')]"
                },
                {
                  "name": "APPM_PASSWORD",
                  "value": "[parameters('diagnosticPassword')]"
                },
                {
                  "name": "APPM_HEXKEY",
                  "value": "[parameters('gatewayEncryptionKey')]"
                }
              ]
            }
          },
          "identity": {
            "type": "SystemAssigned"
          }
        },
        {
          "condition": "[equals(parameters('publicWebApp'), 'yes')]",
          "type": "Microsoft.Web/sites",
          "apiVersion": "2022-09-01",
          "name": "[parameters('gatewayWebAppName')]",
          "location": "[ResourceGroup().location]",
          "kind": "app,linux,container",
          "dependsOn": [
            "[resourceId('Microsoft.Web/serverfarms', variables('appServicePlanName'))]"
          ],
          "properties": {
            "name": "[parameters('gatewayWebAppName')]",
            "http20Enabled": true,
            "httpsOnly": true,
            "virtualNetworkSubnetId":"[variables('gatewaySubnetRef')]",
            "serverFarmId": "[resourceId('Microsoft.Web/serverfarms', variables('appServicePlanName'))]",
            "siteConfig": {
              "linuxFxVersion": "[concat ('DOCKER|juriba/appmgateway:', parameters('gatewayImageName'))]",
              "alwaysOn": true,
              "http20Enabled": true,
              "minTlsVersion": "1.2",
              "healthCheckPath": "/vnc/",
              "ftpsState": "Disabled",
              "cors": {
                "allowedOrigins": ["[concat ('https://', parameters('customerName'), '.appm.juriba.app')]"],
                "supportCredentials": "true"
              },
              "appSettings": [
                {
                  "name": "WEBSITES_ENABLE_APP_SERVICE_STORAGE",
                  "value": "false"
                },
                {
                  "name": "APPM_USERNAME",
                  "value": "[parameters('diagnosticUsername')]"
                },
                {
                  "name": "APPM_PASSWORD",
                  "value": "[parameters('diagnosticPassword')]"
                },
                {
                  "name": "APPM_HEXKEY",
                  "value": "[parameters('gatewayEncryptionKey')]"
                }
              ]
            }
          },
          "identity": {
            "type": "SystemAssigned"
          }
        },
        {
            "type": "Microsoft.ContainerInstance/containerGroups",
            "apiVersion": "2022-09-01",
            "name": "[parameters('guacamoleInstanceName')]", 
            "location": "[ResourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]"
            ],          
            "properties": {
              "containers": [
                {
                  "name": "guacamole",
                  "properties": {
                    "image": "guacamole/guacd:1.4.0",
                    "ports": [
                      {
                        "port": 4822,
                        "protocol": "TCP"
                      }
                    ],
                    "resources": {
                      "requests": {
                        "cpu": 1,
                        "memoryInGB": 1.5
                      }
                    }
                  }
                }
              ],
              "osType": "Linux",
              "subnetIds": [
                {
                  "id": "[variables('containerSubnetRef')]"
                }
              ],
              "restartPolicy": "Always",
              "ipAddress": {
                "type": "Private",
                "ports": [
                  {
                    "port": 4822,
                    "protocol": "TCP"
                  }
                ]
              }
            }
          },
          {
            "condition": "[equals(parameters('publicWebApp'), 'no')]",
            "type": "Microsoft.Network/privateEndpoints",
            "apiVersion": "2019-04-01",
            "name": "[parameters('privateEndpoint_name')]",
            "location": "[ResourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Web/sites', parameters('gatewayWebAppName'))]"
            ],
            "properties": {
                "subnet": {
                    "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('gatewaySubnetName'))]"
                },
                "privateLinkServiceConnections": [
                    {
                        "name": "[parameters('privateLinkConnection_name')]",
                        "properties": {
                            "privateLinkServiceId": "[resourceId('Microsoft.Web/sites', parameters('gatewayWebAppName'))]",
                            "groupIds": [
                                "sites"
                            ]
                        }
                    }
                ]
            } 
          },
          {
            "condition": "[equals(parameters('publicWebApp'), 'no')]",
            "type": "Microsoft.Network/privateDnsZones",
            "apiVersion": "2018-09-01",
            "name": "[parameters('privateDNSZone_name')]",
            "location": "global",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
            ] 
          },
          {
            "condition": "[equals(parameters('publicWebApp'), 'no')]",
            "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
            "apiVersion": "2018-09-01",
            "name": "[concat(parameters('privateDNSZone_name'), '/', parameters('privateDNSZone_name'), '-link')]",
            "location": "global",
            "dependsOn": [
                "[resourceId('Microsoft.Network/privateDnsZones', parameters('privateDNSZone_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
            ],
            "properties": {
                "registrationEnabled": false,
                "virtualNetwork": {
                    "id": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
                }
            }
          },
          {
            "condition": "[equals(parameters('publicWebApp'), 'no')]",
            "type": "Microsoft.Network/privateEndpoints/privateDnsZoneGroups",
            "apiVersion": "2020-03-01",
            "name": "[concat(parameters('privateEndpoint_name'),'/dnsgroupname')]",
            "location": "[ResourceGroup().location]",
            "dependsOn": [
               "[resourceId('Microsoft.Network/privateDnsZones', parameters('privateDNSZone_name'))]",
               "[resourceId('Microsoft.Network/privateEndpoints' , parameters('privateEndpoint_name'))]"
             ],
            "properties": {
                "privateDnsZoneConfigs": [
                    {
                        "name": "config1",
                        "properties": {
                             "privateDnsZoneId": "[resourceId('Microsoft.Network/privateDnsZones', parameters('privateDNSZone_name'))]"
                        }
                    }
                ]
            }
          }   
    ],
    "outputs": {
        "containerIPv4Address": {
          "type": "string",
          "value": "[reference(resourceId('Microsoft.ContainerInstance/containerGroups', parameters('guacamoleInstanceName'))).ipAddress.ip]"
        },
        "siteAddress": {
          "type": "array",
          "value": "[reference(resourceId('Microsoft.Web/sites', parameters('gatewayWebAppName'))).HostNames]"
        }
    }
}
