mainTemplate.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualNetworkNewOrExisting": {
          "type": "string",
          "defaultValue": "new",
          "allowedValues": [
            "new",
            "existing"
          ],
          "metadata": {
            "description": "Determines whether or not a new virtual network should be provisioned."
          }
        },
        "virtualNetworkName": {
            "type": "String",
            "defaultValue": "appm-client-vnet",
            "metadata": {
              "description": "Defines the name of your virtual network"
            }
        },
        "virtualNetworkAddressSpace": {
            "type": "String",
            "defaultValue": "10.0.0.0/22",
            "metadata": {
              "description": "Defines the IP range of your virtual network. This should be in CIDR notation, for example 10.0.0.0/22"
            }
        },
        "containerSubnetName": {
            "type": "String",
            "defaultValue": "container-snet",
            "metadata": {
              "description": "Defines the name of the virtual network subnet where the guacamole container will be located"
            }
        },
        "containerSubnetRange": {
            "type": "String",
            "defaultValue": "10.0.1.0/24",
            "metadata": {
              "description": "Defines the network address subnet which gateway container will be attached to. This should be in CIDR notation, for example 10.0.1.0/24"
            }
        },
        "webAppSubnetName": {
          "type": "String",
          "defaultValue": "webapp-snet",
          "metadata": {
            "description": "Defines the name of the virtual network subnet where the webapp will be located"
          }
        },
        "webAppSubnetRange": {
          "type": "String",
          "defaultValue": "10.0.2.0/24",
          "metadata": {
            "description": "Defines the network address subnet where the webapp will reside. This should be in CIDR notation, for example 10.0.2.0/24"
          }
        },
        "containerInstanceName": {
            "type": "String",
            "defaultValue": "guacamole-ci",
            "metadata": {
              "description": "Defines the name for Guacamole gateway container"
            }
        },
        "containerRestartPolicy": {
            "type": "string",
            "defaultValue": "Always",
            "allowedValues": [
              "Always",
              "Never",
              "OnFailure"
            ],
            "metadata": {
              "description": "The behavior of Azure runtime if gateway container has stopped. Defaults to Always restart."
            }
        },
        "gatewayWebAppName": {
          "type": "String",
          "defaultValue": "appm-gateway",
          "metadata": {
            "description": "Defines the name for Azure gateway web app"
          } 
        },
        "gatewayNetworkSecurityGroupName": {
          "type": "String",
          "defaultValue": "gateway-nsg",
          "metadata": {
            "description": "Defines the name for network security group used for Gateway WebApp"
          } 
        },

        "containerNetworkSecurityGroupName": {
          "type": "String",
          "defaultValue": "container-nsg",
          "metadata": {
            "description": "Defines the name for network security group used for Container"
          } 
        },

        "gatewayImageName": {
          "type": "String",
          "defaultValue": "sha-d9174c1",
          "metadata": {
            "description": "Defines the image to be used for Gateway container. This will default to latest available. Full list can be found here https://hub.docker.com/repository/docker/juriba/appmgateway/general"
          } 
        },
        "APPM_USERNAME": {
          "type": "String",
          "metadata": {
            "description": "Value from AppM application to be used in Gateway container."
          } 
        },
        "APPM_PASSWORD": {
          "type": "securestring",
          "metadata": {
            "description": "Value from AppM application to be used in Gateway container."
          } 
        },  
        "APPM_HEXKEY": {
          "type": "securestring",
          "metadata": {
            "description": "Value from AppM application to be used in Gateway container."
          } 
        },  
        "APPM_HEXIV": {
          "type": "securestring",
          "metadata": {
            "description": "Value from AppM application to be used in Gateway container."
          } 
        }
    },
    "variables": {
        "containerSubnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('containerSubnetName'))]",
        "gatewaySubnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('webAppSubnetName'))]",
        "webAppPortalName": "[concat(parameters('gatewayWebAppName'), '-app')]",
        "appServicePlanName": "[concat(parameters('gatewayWebAppName'), '-asp')]"
    },
    "resources": [
        {
            "condition": "[equals(parameters('virtualNetworkNewOrExisting'), 'new')]",
            "type": "Microsoft.Network/VirtualNetworks",
            "apiVersion": "2021-01-01",
            "name": "[parameters('virtualNetworkName')]",
            "location": "[ResourceGroup().location]",
            "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('gatewayNetworkSecurityGroupName'))]",
              "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('containerNetworkSecurityGroupName'))]"
            ],
            "tags": {},
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('virtualNetworkAddressSpace')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('containerSubnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('containerSubnetRange')]",
                            "networkSecurityGroup": {
                              "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('containerNetworkSecurityGroupName'))]"
                            },
                        "delegations": [
                          {
                            "name": "container",
                            "properties": {
                              "serviceName": "Microsoft.ContainerInstance/containerGroups"
                            }
                          }
                        ]
                        }
                    },

                    {
                      "name": "[parameters('webAppSubnetName')]",
                      "properties": {
                          "addressPrefix": "[parameters('webAppSubnetRange')]",
                          "networkSecurityGroup": {
                            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('gatewayNetworkSecurityGroupName'))]"
                          },
                      "delegations": [
                        {
                          "name": "webapp",
                          "properties": {
                            "serviceName": "Microsoft.Web/serverfarms"
                          }
                        }
                      ]
                      }
                  }

                ]
            }
        },       
        {
          "type": "Microsoft.Network/networkSecurityGroups",
          "apiVersion": "2022-07-01",
          "name": "[parameters('gatewayNetworkSecurityGroupName')]",
          "location": "[ResourceGroup().location]",
          "dependsOn": [],
          "properties": {
              "securityRules": [
                  {
                      "name": "GUACD_Outbound",
                      "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('gatewayNetworkSecurityGroupName'), 'GUACD_Outbound')]",
                      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                      "properties": {
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "4822",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "[parameters('containerSubnetRange')]",
                          "access": "Allow",
                          "priority": 100,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "DENY_Outbound",
                      "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('gatewayNetworkSecurityGroupName'), 'DENY_Outbound')]",
                      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                      "properties": {
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "*",
                          "access": "Deny",
                          "priority": 110,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  }
              ]
          }
        },

        {
          "type": "Microsoft.Network/networkSecurityGroups",
          "apiVersion": "2022-07-01",
          "name": "[parameters('containerNetworkSecurityGroupName')]",
          "location": "[ResourceGroup().location]",
          "dependsOn": [],
          "properties": {
            "securityRules": [
                {
                    "name": "guacdInbound",
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('containerNetworkSecurityGroupName'), 'guacdInbound')]",
                    "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                    "properties": {
                        "protocol": "*",
                        "sourcePortRange": "*",
                        "destinationPortRange": "4822",
                        "sourceAddressPrefix": "10.3.11.0/24",
                        "destinationAddressPrefix": "10.3.254.0/24",
                        "access": "Allow",
                        "priority": 110,
                        "direction": "Inbound",
                        "sourcePortRanges": [],
                        "destinationPortRanges": [],
                        "sourceAddressPrefixes": [],
                        "destinationAddressPrefixes": []
                    }
                }
            ]
        }
        },


        {
          "type": "Microsoft.Web/serverfarms",
          "apiVersion": "2021-02-01",
          "name": "[variables('appServicePlanName')]",
          "location": "[ResourceGroup().location]",
          "sku": {
            "name":"B2",
            "size":"Y1",
            "tier":"Basic"
          },
          "kind": "linux",
          "properties": {
            "reserved": true
          }
        },
        {
          "type": "Microsoft.Web/sites",
          "apiVersion": "2021-03-01",
          "name": "[variables('webAppPortalName')]",
          "location": "[ResourceGroup().location]",
          "kind": "app,linux,container",
          "dependsOn": [
            "[resourceId('Microsoft.Web/serverfarms', variables('appServicePlanName'))]"
          ],
          "properties": {
            "name": "[variables('webAppPortalName')]",
            "http20Enabled": true,
            "httpsOnly": true,
            "virtualNetworkSubnetId":"[variables('gatewaySubnetRef')]",
            "serverFarmId": "[resourceId('Microsoft.Web/serverfarms', variables('appServicePlanName'))]",
            "siteConfig": {
              "linuxFxVersion": "[concat ('DOCKER|juriba/appmgateway:', parameters('gatewayImageName'))]",
              "alwaysOn": true,
              "http20Enabled": true,
              "minTlsVersion": "1.2",
              "healthCheckPath": "/vnc/",
              "ftpsState": "Disabled",
              "appSettings": [
                {
                  "name": "WEBSITES_ENABLE_APP_SERVICE_STORAGE",
                  "value": "false"
                },
                {
                  "name": "APPM_USERNAME",
                  "value": "[parameters('APPM_USERNAME')]"
                },
                {
                  "name": "APPM_PASSWORD",
                  "value": "[parameters('APPM_PASSWORD')]"
                },
                {
                  "name": "APPM_HEXKEY",
                  "value": "[parameters('APPM_HEXKEY')]"
                },
                {
                  "name": "APPM_HEXIV",
                  "value": "[parameters('APPM_HEXIV')]"
                }
              ]
            }
          },
          "identity": {
            "type": "SystemAssigned"
          }
        },
        {
            "type": "Microsoft.ContainerInstance/containerGroups",
            "apiVersion": "2021-09-01",
            "name": "[parameters('containerInstanceName')]", 
            "location": "[ResourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]"
            ],          
            "properties": {
              "containers": [
                {
                  "name": "guacamole",
                  "properties": {
                    "image": "guacamole/guacd:1.4.0",
                    "ports": [
                      {
                        "port": "4822",
                        "protocol": "TCP"
                      }
                    ],
                    "resources": {
                      "requests": {
                        "cpu": "1",
                        "memoryInGB": "1.5"
                      }
                    }
                  }
                }
              ],
              "osType": "Linux",
              "subnetIds": [
                {
                  "id": "[variables('containerSubnetRef')]"
                }
              ],
              "restartPolicy": "[parameters('containerRestartPolicy')]",
              "ipAddress": {
                "type": "Private",
                "ports": [
                  {
                    "port": "4822",
                    "protocol": "TCP"
                  }
                ]
              }
            }
          }
    ],
    "outputs": {
        "containerIPv4Address": {
          "type": "string",
          "value": "[reference(resourceId('Microsoft.ContainerInstance/containerGroups', parameters('containerInstanceName'))).ipAddress.ip]"
        }
      }
}
